log-schemas/27.5/opcua_binary_diag_info_detail.rst
``opcua_binary_diag_info_detail`` field reference
-------------------------------------------------

.. list-table::
   :header-rows: 1
   :class: longtable
   :widths: 1 3

   * - Field (Type)
     - Description

   * - ``ts`` (time)
     - The ts information.

   * - ``uid`` (string)
     - The uid information.

   * - ``id.orig_h`` (string - addr)
     - The originator's IP address.

   * - ``id.orig_p`` (integer - port)
     - The originator's port number.

   * - ``id.resp_h`` (string - addr)
     - The responder's IP address.

   * - ``id.resp_p`` (integer - port)
     - The responder's port number.

   * - ``diag_info_link_id`` (string)
     - The diag_info_link_id information.

   * - ``root_object_id`` (string)
     - The root_object_id information.

   * - ``source`` (integer - count)
     - The source information.

   * - ``source_str`` (string)
     - The source_str information.

   * - ``inner_diag_level`` (integer - count)
     - The inner_diag_level information.

   * - ``has_symbolic_id`` (boolean - bool)
     - The has_symbolic_id information.

   * - ``symbolic_id`` (integer - count)
     - The symbolic_id information.

   * - ``symbolic_id_str`` (string)
     - The symbolic_id_str information.

   * - ``has_namespace_uri`` (boolean - bool)
     - The has_namespace_uri information.

   * - ``namespace_uri`` (integer - count)
     - The namespace_uri information.

   * - ``namespace_uri_str`` (string)
     - The namespace_uri_str information.

   * - ``has_locale`` (boolean - bool)
     - The has_locale information.

   * - ``locale`` (integer - count)
     - The locale information.

   * - ``locale_str`` (string)
     - The locale_str information.

   * - ``has_locale_txt`` (boolean - bool)
     - The has_locale_txt information.

   * - ``locale_txt`` (integer - count)
     - The locale_txt information.

   * - ``locale_txt_str`` (string)
     - The locale_txt_str information.

   * - ``has_addl_info`` (boolean - bool)
     - The has_addl_info information.

   * - ``addl_info`` (string)
     - The addl_info information.

   * - ``has_inner_stat_code`` (boolean - bool)
     - The has_inner_stat_code information.

   * - ``inner_stat_code`` (string)
     - The inner_stat_code information.

   * - ``has_inner_diag_info`` (boolean - bool)
     - The has_inner_diag_info information.
